--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background: url('img/bg.jpg');
+        background: url('img/bg.jpg');/* adding img in bkg */
         background-size:89% ;
         background-position: absolute ;
-        /* adding img in bkg */
     }
 
     .left {
